// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DonorCard renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="sc-pbJYR hNzbLI sc-pkfPC fQMEfn"
  >
    <div
      class="sc-AxjAm sc-qYsuA sc-psDhf dOhwaS"
      color="background.lightest"
      data-testid="donor-card"
      width="1"
    >
      <div
        class="sc-AxhCb jTwMnz"
        color="text.darkest"
        font-size="1"
      />
      <div
        class="sc-AxhCb jMzzet"
        color="text.light"
        font-size="1"
      >
        Last Donation: -
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DonorCard skeleton renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="sc-pbJYR hNzbLI sc-pkfPC fQMEfn"
  >
    <div
      class="sc-AxjAm sc-qYsuA sc-psDhf iiqOGC sc-qYUWV bqBpfh"
      color="background.lightest"
      width="1"
    >
      <span>
        <span
          class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
          style="width: 25%;"
        >
          ‌
        </span>
      </span>
      <span>
        <span
          class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
          style="width: 50%;"
        >
          ‌
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
